--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ReactModal__Overlay {
+  background-color: rgba(18, 20, 23, 0.5) !important;
+}
