--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 
 .ReactModal__Overlay {
   background-color: rgba(18, 20, 23, 0.5) !important;
+  z-index: 999;
 }
 .css-1nmdiq5-menu {
+}
+html {
+  font-family: 'Manrope', sans-serif;
 }
