--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,13 @@ html {
     color: white;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(18, 20, 23, 0.05);
+}
